--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> -->
     <title>Blgr landing page</title> <!-- <title>Frontend Mentor | [Blogr]</title> -->
-    <link rel='stylesheet' href='#styles.css'/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
+
+    <link href='styles.css' rel='stylesheet' type='text/css'/>
   </head>
 
   <body>
