Add images to html.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <!-- <img src="" alt=""> -->
+      <img src='images/logo.svg' alt='logo'>
       <nav>
         <ul class='menu'>
           <li><a href='#'>Product</a>
@@ -70,12 +70,16 @@
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
           </p>
         </div>
-        <!-- <div class="body-1-img"></div> -->
+        <div class="body-1-img">
+          <img src='images/illustration-editor-mobile.svg' alt='Editor mockup. Background: header is salmon-colored, and body is dark blue. In forefront, on the left a small white cube with a dark blue circle in the middle. On the right, a vertical rectangle with a salmon squiggly line through the middle.'/>
+        </div>
       </section>
 
       <section class="body sec-2">
         <div class="body-1-text">
-          <!-- <div class="body-1-img"></div> -->
+          <div class="body-2-img">
+            <img src='images/illustration-phones.svg' alt='Two phones screens next to each other, first one is offset a little towards the top. Second is offset an equal amount towards the bottom. First screen has a salmon background with the "Blgr" logo in the middle. Second screen has a salmon header background, and rest of background is light purple. On the foreground there are five empty white rectangles from top to bottom.'>
+          </div>
           <h2>State of the Art Infrastructure</h2>
           <p>
             With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
@@ -85,7 +89,9 @@
       </section>
 
       <section class="body sec-3">
-        <!-- <div class="body-1-img"></div> -->
+        <div class="body-3-img">
+          <img src='images/illustration-laptop-mobile.svg' alt='Illustration of an open laptop showing a mock website. There is a salmon header strip on the background and the bottom part of the background is light grey. On the foreground, there are two columns. The left column is small in width, and is just white. The right column is wider, and has two rows. First row is a grey rectangle. Second row is a grey cube, a gap, and a grey rectangle taking up the rest of the width.'/>
+        </div>
         <div class="body-1-text">
           <h3>Free, open, simple</h3>
           <p>
@@ -103,7 +109,7 @@
     </main>
 
     <footer>
-        <!-- <img src="" alt=""> -->
+        <img src='images/logo.svg' alt='logo'>
         <ul class='menu'>
           <li><a href='#'>Product</a>
             <ul>
