Rename section's .body class to .container.

--- a/index.html
+++ b/index.html
@@ -13,50 +13,52 @@
   </head>
 
   <body>
-    <header>
-      <img src='images/logo.svg' alt='logo'>
-      <nav>
-        <ul class='menu'>
-          <li><a href='#'>Product</a>
-            <ul>
-              <li><a href='#'>Overview</a></li>
-              <li><a href='#'>Pricing</a></li>
-              <li><a href='#'>Marketplace</a></li>
-              <li><a href='#'>Features</a></li>
-              <li><a href='#'>Integrations</a></li>
-            </ul>
-          </li>
-          <li><a href='#'>Company</a>
-            <ul>
-              <li><a href='#'>About</a></li>
-              <li><a href='#'>Team</a></li>
-              <li><a href='#'>Blog</a></li>
-              <li><a href='#'>Careers</a></li>
-            </ul>
-          </li>
-          <li><a href='#'>Connect</a>
-            <ul>
-              <li><a href='#'>Contact</a></li>
-              <li><a href='#'>Newsletter</a></li>
-              <li><a href='#'>LinkedIn</a></li>
-            </ul>
-          </li>
-        </ul>
-        <button>Login</button>
-        <button>Sign Up</button>
-      </nav>
-    </header>
+    <div class="home-top">
+      <header>
+        <img src='images/logo.svg' alt='logo'>
+        <nav>
+          <ul class='menu'>
+            <li><a href='#'>Product</a>
+              <ul>
+                <li><a href='#'>Overview</a></li>
+                <li><a href='#'>Pricing</a></li>
+                <li><a href='#'>Marketplace</a></li>
+                <li><a href='#'>Features</a></li>
+                <li><a href='#'>Integrations</a></li>
+              </ul>
+            </li>
+            <li><a href='#'>Company</a>
+              <ul>
+                <li><a href='#'>About</a></li>
+                <li><a href='#'>Team</a></li>
+                <li><a href='#'>Blog</a></li>
+                <li><a href='#'>Careers</a></li>
+              </ul>
+            </li>
+            <li><a href='#'>Connect</a>
+              <ul>
+                <li><a href='#'>Contact</a></li>
+                <li><a href='#'>Newsletter</a></li>
+                <li><a href='#'>LinkedIn</a></li>
+              </ul>
+            </li>
+          </ul>
+          <button>Login</button>
+          <button>Sign Up</button>
+        </nav>
+      </header>
+      <section class='hero-banner'>
+        <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <button>Start for Free</button>
+      <button>Learn More</button>
+        </section>
+    </div>
 
     <main>
-      <section class='hero-banner'>
-          <h1>A modern publishing platform</h1>
-        <p>Grow your audience and build your online brand</p>
-        <button>Start for Free</button>
-        <button>Learn More</button>
-      </section>
-      <section class="body sec-1">
+      <section class="container sec-1">
         <h2>Designed for the future</h2>
-        <div class="body-1-text">
+        <div class="sec-1-text">
           <h3>Introducing an extensible editor</h3>
           <p>
             Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
@@ -70,14 +72,14 @@
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
           </p>
         </div>
-        <div class="body-1-img">
+        <div class="sec-1-img">
           <img src='images/illustration-editor-mobile.svg' alt='Editor mockup. Background: header is salmon-colored, and body is dark blue. In forefront, on the left a small white cube with a dark blue circle in the middle. On the right, a vertical rectangle with a salmon squiggly line through the middle.'/>
         </div>
       </section>
 
-      <section class="body sec-2">
-        <div class="body-1-text">
-          <div class="body-2-img">
+      <section class="container sec-2">
+        <div class="sec-2-text">
+          <div class="sec-2-img">
             <img src='images/illustration-phones.svg' alt='Two phones screens next to each other, first one is offset a little towards the top. Second is offset an equal amount towards the bottom. First screen has a salmon background with the "Blgr" logo in the middle. Second screen has a salmon header background, and rest of background is light purple. On the foreground there are five empty white rectangles from top to bottom.'>
           </div>
           <h2>State of the Art Infrastructure</h2>
@@ -88,11 +90,11 @@
         </div>
       </section>
 
-      <section class="body sec-3">
-        <div class="body-3-img">
+      <section class="container sec-3">
+        <div class="sec-3-img">
           <img src='images/illustration-laptop-mobile.svg' alt='Illustration of an open laptop showing a mock website. There is a salmon header strip on the background and the bottom part of the background is light grey. On the foreground, there are two columns. The left column is small in width, and is just white. The right column is wider, and has two rows. First row is a grey rectangle. Second row is a grey cube, a gap, and a grey rectangle taking up the rest of the width.'/>
         </div>
-        <div class="body-1-text">
+        <div class="sec-3-text">
           <h3>Free, open, simple</h3>
           <p>
             Blogr is a free and open source application backed by a large community of helpful developers. It supports 
