--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main>
       <section class="container sec-1">
-        <h2>Designed for the future</h2>
+        <h2 class='sec-1-title'>Designed for the future</h2>
         <div class="sec-1-text">
           <h3>Introducing an extensible editor</h3>
           <p>
@@ -82,7 +82,7 @@
           <div class="sec-2-img">
             <img src='images/illustration-phones.svg' alt='Two phones screens next to each other, first one is offset a little towards the top. Second is offset an equal amount towards the bottom. First screen has a salmon background with the "Blgr" logo in the middle. Second screen has a salmon header background, and rest of background is light purple. On the foreground there are five empty white rectangles from top to bottom.'>
           </div>
-          <h2>State of the Art Infrastructure</h2>
+          <h2 class='sec-2-title'>State of the Art Infrastructure</h2>
           <p>
             With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
             This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
@@ -110,10 +110,11 @@
       </section>
     </main>
 
-    <footer>
+    <footer class='footer'>
         <img src='images/logo.svg' alt='logo'>
-        <ul class='menu'>
-          <li><a href='#'>Product</a>
+        <div class='menu'>
+          <div class='footer-categories footer-category-1'>
+            <h4>Product</h4>
             <ul>
               <li><a href='#'>Overview</a></li>
               <li><a href='#'>Pricing</a></li>
@@ -121,23 +122,27 @@
               <li><a href='#'>Features</a></li>
               <li><a href='#'>Integrations</a></li>
             </ul>
-          </li>
-          <li><a href='#'>Company</a>
+          </div>
+
+          <div class='footer-categories footer-category-2'>
+            <h4>Company</h4>
             <ul>
               <li><a href='#'>About</a></li>
               <li><a href='#'>Team</a></li>
               <li><a href='#'>Blog</a></li>
               <li><a href='#'>Careers</a></li>
             </ul>
-          </li>
-          <li><a href='#'>Connect</a>
+          </div>
+
+          <div class='footer-categories footer-category-3'>
+            <h4>Connect</h4>
             <ul>
               <li><a href='#'>Contact</a></li>
               <li><a href='#'>Newsletter</a></li>
               <li><a href='#'>LinkedIn</a></li>
             </ul>
-          </li>
-        </ul>
+          </div>
+        </section>
       
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
