Add burger menu image for navbar on mobile, add class of menu to the <nav> and change <ul>'s class to nav-list.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <div class="home-top">
       <header>
         <img src='images/logo.svg' alt='logo'>
-        <nav>
-          <ul class='menu'>
+        <button class='burger-menu'>
+          <img src='images/icon-hamburger.svg' alt='burger menu'/>
+        </button>
+        <nav class='menu'>
+          <ul class='nav-list'>
             <li><a href='#'>Product</a>
               <ul>
                 <li><a href='#'>Overview</a></li>
@@ -149,5 +152,6 @@
         Coded by <a href="#">Alisha Soriano</a>.
       </div>
     </footer>
+    <script src='index.js'></script>
   </body>
 </html>
