--- a/index.html
+++ b/index.html
@@ -18,36 +18,38 @@
         <div class="mobile-header">
           <img class='header-logo' src='images/logo.svg' alt='logo'>
           <button class='burger-menu'>
-            <img src='images/icon-hamburger.svg' alt='burger menu'/>
+            <img class='mobile-menu-img' src='images/icon-hamburger.svg' alt='burger menu'/>
           </button>
         </div>
         <nav class='menu'>
-          <ul class='nav-list'>
-            <li><a href='#'>Product</a>
-              <ul>
-                <li><a href='#'>Overview</a></li>
-                <li><a href='#'>Pricing</a></li>
-                <li><a href='#'>Marketplace</a></li>
-                <li><a href='#'>Features</a></li>
-                <li><a href='#'>Integrations</a></li>
-              </ul>
-            </li>
-            <li><a href='#'>Company</a>
-              <ul>
-                <li><a href='#'>About</a></li>
-                <li><a href='#'>Team</a></li>
-                <li><a href='#'>Blog</a></li>
-                <li><a href='#'>Careers</a></li>
-              </ul>
-            </li>
-            <li><a href='#'>Connect</a>
-              <ul>
-                <li><a href='#'>Contact</a></li>
-                <li><a href='#'>Newsletter</a></li>
-                <li><a href='#'>LinkedIn</a></li>
-              </ul>
-            </li>
-          </ul>
+          <div class="nav-list-container">
+            <ul class='nav-list'>
+              <li><a href='#'>Product</a>
+                <ul>
+                  <li><a href='#'>Overview</a></li>
+                  <li><a href='#'>Pricing</a></li>
+                  <li><a href='#'>Marketplace</a></li>
+                  <li><a href='#'>Features</a></li>
+                  <li><a href='#'>Integrations</a></li>
+                </ul>
+              </li>
+              <li><a href='#'>Company</a>
+                <ul>
+                  <li><a href='#'>About</a></li>
+                  <li><a href='#'>Team</a></li>
+                  <li><a href='#'>Blog</a></li>
+                  <li><a href='#'>Careers</a></li>
+                </ul>
+              </li>
+              <li><a href='#'>Connect</a>
+                <ul>
+                  <li><a href='#'>Contact</a></li>
+                  <li><a href='#'>Newsletter</a></li>
+                  <li><a href='#'>LinkedIn</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
           <div class="btn-container">
             <button id='login-btn'>Login</button>
             <button id='sign-btn' class='btn'>Sign Up</button>
@@ -55,11 +57,13 @@
         </nav>
       </header>
       <section class='hero-banner'>
-        <h1>A modern publishing platform</h1>
-      <p>Grow your audience and build your online brand</p>
-      <button id='start-btn' class='btn'>Start for Free</button>
-      <button id='learn-btn' class='btn'>Learn More</button>
-        </section>
+        <div class="hero-container">
+          <h1>A modern publishing platform</h1>
+          <p>Grow your audience and build your online brand</p>
+          <button id='start-btn' class='btn'>Start for Free</button>
+          <button id='learn-btn' class='btn'>Learn More</button>
+        </div>
+      </section>
     </div>
 
     <main>
