--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         <nav class='menu'>
           <div class="nav-list-container">
             <ul class='nav-list'>
-              <li><a href='#'>Product</a>
-                <ul>
-                  <li><a href='#'>Overview</a></li>
-                  <li><a href='#'>Pricing</a></li>
-                  <li><a href='#'>Marketplace</a></li>
-                  <li><a href='#'>Features</a></li>
-                  <li><a href='#'>Integrations</a></li>
+              <li class='nav-item-sublist nav-item'><a href='#'>Product</a>
+                <ul class='sublist'>
+                  <li class='nav-item'><a href='#'>Overview</a></li>
+                  <li class='nav-item'><a href='#'>Pricing</a></li>
+                  <li class='nav-item'><a href='#'>Marketplace</a></li>
+                  <li class='nav-item'><a href='#'>Features</a></li>
+                  <li class='nav-item'><a href='#'>Integrations</a></li>
                 </ul>
               </li>
-              <li><a href='#'>Company</a>
-                <ul>
-                  <li><a href='#'>About</a></li>
-                  <li><a href='#'>Team</a></li>
-                  <li><a href='#'>Blog</a></li>
-                  <li><a href='#'>Careers</a></li>
+              <li class='nav-item-sublist nav-item'><a href='#'>Company</a>
+                <ul class='sublist'>
+                  <li class='nav-item'><a href='#'>About</a></li>
+                  <li class='nav-item'><a href='#'>Team</a></li>
+                  <li class='nav-item'><a href='#'>Blog</a></li>
+                  <li class='nav-item'><a href='#'>Careers</a></li>
                 </ul>
               </li>
-              <li><a href='#'>Connect</a>
-                <ul>
-                  <li><a href='#'>Contact</a></li>
-                  <li><a href='#'>Newsletter</a></li>
-                  <li><a href='#'>LinkedIn</a></li>
+              <li class='nav-item-sublist nav-item'><a href='#'>Connect</a>
+                <ul class='sublist'>
+                  <li class='nav-item'><a href='#'>Contact</a></li>
+                  <li class='nav-item'><a href='#'>Newsletter</a></li>
+                  <li class='nav-item'><a href='#'>LinkedIn</a></li>
                 </ul>
               </li>
             </ul>
