--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blgr landing page</title> <!-- <title>Frontend Mentor | [Blogr]</title> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;300;400;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
 
     <link href='styles.css' rel='stylesheet' type='text/css'/>
   </head>
@@ -70,7 +70,7 @@
       <section class="container sec-1">
         <h2 class='sec-1-title'>Designed for the future</h2>
         <div class="sec-1-text">
-          <h3>Introducing an extensible editor</h3>
+          <h3>Introducing an <br/> extensible editor</h3>
           <p>
             Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
             The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
