--- a/index.html
+++ b/index.html
@@ -69,22 +69,24 @@
     <main>
       <section class="container sec-1">
         <h2 class='sec-1-title'>Designed for the future</h2>
-        <div class="sec-1-text">
-          <h3>Introducing an <br/> extensible editor</h3>
-          <p>
-            Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
-            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
-            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
-            change the looks of a blog.
-          </p>
-          <h3>Robust content management</h3>
-          <p>
-            Flexible content management enables users to easily move through posts. Increase the usability of your blog
-            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-          </p>
-        </div>
-        <div class="sec-1-img-container">
-          <img class='sec-1-img' src='images/illustration-editor-mobile.svg' alt='Editor mockup. Background: header is salmon-colored, and body is dark blue. In forefront, on the left a small white cube with a dark blue circle in the middle. On the right, a vertical rectangle with a salmon squiggly line through the middle.'/>
+        <div class="wrapper">
+          <div class="sec-1-text">
+            <h3>Introducing an <br/> extensible editor</h3>
+            <p>
+              Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+              The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+              videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.
+            </p>
+            <h3>Robust content management</h3>
+            <p>
+              Flexible content management enables users to easily move through posts. Increase the usability of your blog
+              by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+            </p>
+          </div>
+          <div class="sec-1-img-container">
+            <img class='sec-1-img' src='images/illustration-editor-mobile.svg' alt='Editor mockup. Background: header is salmon-colored, and body is dark blue. In forefront, on the left a small white cube with a dark blue circle in the middle. On the right, a vertical rectangle with a salmon squiggly line through the middle.'/>
+          </div>
         </div>
       </section>
 
@@ -122,7 +124,7 @@
     </main>
 
     <footer class='footer'>
-        <img src='images/logo.svg' alt='logo'>
+        <img class='footer-logo' src='images/logo.svg' alt='logo'>
         <div class='footer-menu'>
           <div class='footer-categories footer-category-1'>
             <h4>Product</h4>
@@ -153,7 +155,7 @@
               <li><a href='#'>LinkedIn</a></li>
             </ul>
           </div>
-        </section>
+        </div>
       
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
